# ChangeLog for media-radio/cwdaemon
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/cwdaemon/ChangeLog,v 1.3 2004/06/30 02:42:53 killsoft Exp $

  29 Jun 2004; Robb Romans <killsoft@gentoo.org> cwdaemon-0.8.ebuild:
  Move to virtual/libc

*cwdaemon-0.8 (28 Jun 2004)

  28 Jun 2004; David Holm <dholm@gentoo.org> cwdaemon-0.8.ebuild:
  Added to ~ppc.

  27 Jun 2004; Robb Romans <killsoft@gentoo.org> +metadata.xml:
  Initial import.
