@@ -1,4 +1,4 @@
 MD5 6c0aba3ecd4ef773316e288eef5ecc63 ChangeLog 505
 MD5 28d0c3bb6c80425620241cff231da8d3 metadata.xml 224
-MD5 d54d58bcffcf7aaed3c937d9c40af4bb cwdaemon-0.8.ebuild 631
+MD5 e5a261349007e0f90a94403b1df36958 cwdaemon-0.8.ebuild 534
 MD5 633b819de27cf3df96bde26d370959d5 files/digest-cwdaemon-0.8 64
