@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/cwdaemon/Attic/cwdaemon-0.8.ebuild,v 1.3 2004/06/30 02:42:53 killsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/cwdaemon/Attic/cwdaemon-0.8.ebuild,v 1.4 2004/08/05 00:35:27 killsoft Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.qsl.net/pg4i/download/${P}.tar.gz"
 LICENSE="GPL-2"
 
 SLOT="0"
-KEYWORDS="~x86 ~ppc"
+KEYWORDS="x86 ~ppc ~alpha"
 IUSE=""
 
 RDEPEND="virtual/libc"
@@ -24,3 +24,4 @@ src_compile() {
 src_install() {
 	einstall || die
 }
+
