@@ -1,6 +1,9 @@
 # ChangeLog for media-radio/cwdaemon
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/cwdaemon/ChangeLog,v 1.3 2004/06/30 02:42:53 killsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/cwdaemon/ChangeLog,v 1.4 2004/08/05 00:35:27 killsoft Exp $
+
+  04 Aug 2004; Robb Romans <killsoft@gentoo.org> cwdaemon-0.8.ebuild:
+  Mark stable on x86, add ~alpha.
 
   29 Jun 2004; Robb Romans <killsoft@gentoo.org> cwdaemon-0.8.ebuild:
   Move to virtual/libc
